<resources>
    <string name="app_name">Businix</string>
    <!-- introduction-->
    <string name="introduction_title">Chào mừng bạn đến với </string>
    <string name="introduction_description">Chúng tôi rất hân hạnh khi bạn tham gia và trở thành một phần của đội ngũ Businix. Hãy hoàn thành quá trình đăng ký để bắt đầu nhé!</string>
    <!--Dialog-->
    <string name="dialog_title">Bạn có muốn dừng tạo tài khoản không?</string>
    <string name="dialog_description">Nếu dừng ngay bây giờ, bạn sẽ mất toàn bộ tiến trình đã thực hiện.</string>
    <string name="dialog_continue_choice">Tiếp tục tạo tài khoản</string>
    <string name="dialog_cancel_choice">Dừng tạo tài khoản</string>
    <!--Logout-Dialog-->
    <string name="logout_dialog_title">Bạn có muốn thoát quyền sử dụng?</string>
    <string name="logout_dialog_cancel_choice">Hủy</string>
    <string name="logout_dialog_continue_choice">Đồng ý</string>

    <!--OTP-->
    <string name="otp_description">Businix sẽ gửi mã OTP đến số điện thoại</string>
    <string name="phone_number_receive_otp"></string>
    <string name="confirm_send_otp">Bạn chắc chắn sẽ nhận mã qua số trên không?</string>
    <string name="press_otp_message">Nhập mã OTP Businix đã gửi đến</string>
    <string name="do_not_receive_otp">Bạn chưa nhận OTP?</string>
    <string name="resend_otp">Gửi lại</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="empty">...</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="break_">Break</string>
    <string name="after_break">After break</string>
    <string name="overtime">Overtime</string>

    <string name="total">Tổng quan</string>
    <string name="attendance">Hiện diện</string>
    <string name="absence">Vắng</string>
    <string name="late">Trễ</string>

    <string name="bg">background</string>

    <string-array name="shift_options">
        <item>Cả ngày</item>
        <item>Ca sáng</item>
        <item>Ca chiều</item>
    </string-array>

    <!--Confirm delete Dialog-->
    <string name="delete_dialog_question">Bạn có muốn xóa thành phần này không?</string>
    <string name="delete_dialog_msg">Việc xóa thành phần sẽ làm mất đi dữ liệu hiện tại, hãy cân nhắc trước khi xóa</string>
    <string name="title_activity_admin_edit_employee">AdminEditEmployeeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="currentSalary">Lương tháng hiện tại (còn cập nhật)</string>
    <string name="oldSalary">Lương đã tất toán</string>
</resources>