<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:gravity="right">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:fontFamily="@font/regular_font"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_description"
        android:paddingVertical="20dp"
        android:fontFamily="@font/regular_font"
        android:lineSpacingMultiplier="1.3"
        android:textSize="16sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:text="@string/logout_dialog_cancel_choice"
            android:textColor="@color/black"
            android:fontFamily="@font/regular_font"
            android:background="@color/transparent"
            android:textAllCaps="true"
            android:textSize="16sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_dialog_continue_choice"
            android:paddingHorizontal="20dp"
            android:textColor="@color/medium_purple"
            android:fontFamily="@font/regular_font"
            android:background="@color/transparent"
            android:textSize="16sp"
            android:paddingVertical="10dp"
            android:textAllCaps="true"
            android:orientation="horizontal" />
    </LinearLayout>
</LinearLayout>