<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:gravity="right"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular_font"
        android:text="@string/logout_dialog_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:fontFamily="@font/regular_font"
            android:text="@string/logout_dialog_continue_choice"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:fontFamily="@font/regular_font"
            android:text="@string/logout_dialog_cancel_choice"
            android:textColor="@color/medium_purple"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>