<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroductionFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img_introduction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium_font"
            android:text="@string/introduction_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium_font"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/light_purple"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/regular_font"
        android:text="@string/introduction_description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="30dp"
        android:lineSpacingMultiplier="1.25"
        android:textColor="@color/black"/>

</LinearLayout>