<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".activities.employee.TimeAttendanceActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/medium_purple_round_shape"
        android:elevation="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/medium_font"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular_font"
                    android:text="@string/attendance"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium_font"
                    android:gravity="bottom"
                    android:text="14"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular_font"
                    android:text="@string/overtime"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium_font"
                    android:gravity="bottom"
                    android:text="11"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular_font"
                    android:text="@string/late"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium_font"
                    android:gravity="bottom"
                    android:text="0,2h"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_check_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@drawable/light_round_shape"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:backgroundTint="@color/white">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_in"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textColor="@color/dark_purple"
            android:fontFamily="@font/regular_font"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_in"
            app:tint="@color/dark_purple"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_check_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@drawable/light_round_shape"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:elevation="0dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        android:backgroundTint="@color/gray">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_out"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/regular_font"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/dark_gray"
            android:src="@drawable/ic_check_out"/>
    </LinearLayout>

</LinearLayout>