<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/otp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/medium_font"
            android:text="Xác thực mã OTP"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/regular_font"
            android:text="@string/press_otp_message"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/medium_font"
            android:textColor="@color/medium_purple"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_code_1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>

            <EditText
                android:id="@+id/input_code_2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>

            <EditText
                android:id="@+id/input_code_3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>

            <EditText
                android:id="@+id/input_code_4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>

            <EditText
                android:id="@+id/input_code_5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>

            <EditText
                android:id="@+id/input_code_6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/medium_font"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"></EditText>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/btn_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/custom_btn"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_btn_verify_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/regular_font"
                    android:text="Xác nhận"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/custom_progress_bar"
                android:visibility="gone">

            </ProgressBar>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/regular_font"
                android:text="@string/do_not_receive_otp" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/medium_font"
                android:text="@string/resend_otp"
                android:textColor="@color/medium_purple"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>